kubernetes/homelab-k8s-001/apps/network/external-services/app/minio.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
subsets:
  - addresses:
      - ip: ${QNAP_ADDR}
    ports:
      - name: http
        port: 39010
      - name: minio
        port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
 ports:
   - name: http
     port: 39010
     protocol: TCP
     targetPort: 39010
     appProtocol: https
   - name: minio
     port: 9000
     protocol: TCP
     targetPort: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:minio"
  labels:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
  name: minio
spec:
  hostnames:
  - minio.dmfrey.com
  parentRefs:
  - kind: Gateway
    name: internal
    namespace: kube-system
  rules:
  - backendRefs:
    - kind: Service
      name: minio
      port: 39010
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     hajimari.io/enable: "true"
#     hajimari.io/icon: "simple-icons:minio"

#     external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
#   labels:
#     app.kubernetes.io/instance: minio
#     app.kubernetes.io/name: minio
#   name: minio
#   namespace: network
# spec:
#   ingressClassName: internal
#   rules:
#   - host: minio.${SECRET_DOMAIN}
#     http:
#       paths:
#       - backend:
#           service:
#             name: minio
#             port:
#               number: 39010
#         path: /
#         pathType: Prefix
# ---
# # yaml-language-server: $schema=https://kubernetes-schemas.dmfrey.com/monitoring.coreos.com/scrapeconfig_v1alpha1.json
# apiVersion: monitoring.coreos.com/v1alpha1
# kind: ScrapeConfig
# metadata:
#   name: &name minio-job
#   labels:
#     prometheus: scrape-me
# spec:
#   authorization:
#     type: Bearer
#     credentials:
#       name: minio-secret
#       key: MINIO_BEARER_TOKEN
#   scrapeInterval: 60s
#   scheme: HTTP
#   staticConfigs:
#     - targets:
#         - minio.network.svc.cluster.local:9000
#   metricsPath: /minio/metrics/v3
#   relabelings:
#     - action: replace
#       targetLabel: job
#       replacement: *name
