kubernetes/homelab-k8s-001/apps/network/external-services/app/unifi.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
subsets:
  - addresses:
      - ip: 192.168.30.1
    ports:
      - name: http
        port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  ports:
    - name: http
      port: 443
      targetPort: 443
      protocol: TCP
      appProtocol: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: &app unifi
    app.kubernetes.io/name: *app
    app.kubernetes.io/part-of: *app
  name: *app
spec:
  hostnames:
  - unifi.dmfrey.com
  parentRefs:
  - kind: Gateway
    name: envoy-internal
    namespace: network
  rules:
  - backendRefs:
    - kind: Service
      name: *app
      port: 443
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
